--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="links">
 	<a href="#">HOME</a>
 		&bull;
-	<a href="#">WHAT WE DO</a>
+	<a href="#whatwedo">WHAT WE DO</a>
 		&bull;
 	<a href="#">GALLERY</a>
 		&bull;
@@ -35,10 +35,13 @@
 	
 	
 	<div class="banner">
-<img src="DSC_0106.jpg" />
+		
+       
 </div>
 	
-<div class="services">
+<div id="whatwedo" class="services">
+	
+	
 
 	<div class="descriptions">
 		
@@ -48,15 +51,6 @@
 		
 	</div>
 	
-	<div class="block">
-	
-	 <p></p>
-	
-	</div>
-	<div class="block">
-	
-	
-	</div>
 	<div class="block">
 	
 	  <h2> Shape </h2>
@@ -105,30 +99,45 @@
 		
 	</div>
 	
-	<div class="little image">
+    <div class="image-grid">
+    <div class="little image">
+        <img src="photos/foam%201.jpeg">
 	</div>
 	<div class="little image">
+        <img src="photos/foam2.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/foam%203.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/foam%204.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/glass%201.jpg">
 	</div>
 	<div class="little image">
+		<img src="photos/glass2.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/glass%203.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/glass4.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/sand1.jpg">
 	</div>
 	<div class="little image">
+		<img src="photos/sand2.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/sand3.jpeg">
 	</div>
 	<div class="little image">
+		<img src="photos/sand4.jpeg">
 	</div>
+    </div>
+	
 	
 </div>
 	
@@ -146,15 +155,15 @@
 		
 	</div>
 	
-	<div class="headshots">
-		<h3>image one </h3>
-	  <p> centered </p>
-		
-	</div>
-	<div class="headshots">
-		<h3> image two </h3>
-	  <p> centered </p>
-	</div>
+    <div class="about-grid">
+        <div class="headshots">
+            <img src="photos/about%201.JPG">
+        </div>
+        <div class="headshots">
+            <img src="photos/moutain.jpg">
+        </div>
+    </div>
+	
 	
 
 </div>
@@ -173,6 +182,7 @@
 		
 		
 	</div>
+    
 	<div class="form">
 	
 		
@@ -236,7 +246,7 @@
 	
 	</div>
 	
-	<div class=" details">
+	<div class="details">
 		
 		<h3> Contact </h3>
 		
@@ -263,7 +273,9 @@
 	
 	<div class="copyright">&copy; copyright text</div>
 	<div class="social-
-	media"> social media image </div>
+	media"> <img src="photos/social.png"> 
+		
+		</div>
 	
 	</div>
 	
